--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "client": "cd client && yarn start",
     "server": "nodemon server.js",
     "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\"",
-    "start": "concurrently \"nodemon server.js\" \"cd client && yarn start\""
+    "start": "concurrently \"yarn server\" \"yarn client\""
   },
   "dependencies": {
     "@material-ui/icons": "^4.9.1",
