--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "express": "^4.16.4",
     "multer": "^1.4.2",
     "mysql": "^2.18.1",
-    "nodemon": "^2.0.3"
+    "nodemon": "^2.0.3",
+    "concurrently": "^4.0.1"
   },
   "devDependencies": {
     "concurrently": "^4.0.1"
